# harness-engineering-guide

./: .env.example  .gitignore  LICENSE  Makefile  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: docs-check.yml  pages.yml  pr-preview-cleanup.yml  pr-preview.yml  sync-reference-template.yml
docs/: index.md
docs/en/: index.md  learning-path.md  open-source-readiness.md
docs/en/concepts/: agentic-architectures.md  ai-rules-architecture.md  context-engineering.md  governance-skills-automation-orchestration.md  harness-engineering.md  skills-vs-prompts.md
docs/en/evidence/: index.md  reading-list.md  research.md  security.md  vendor-docs.md
docs/en/labs/: create-a-rule.md  create-a-skill.md  index.md  publish-safe-docs.md  validate-a-change.md
docs/en/patterns/: adapter-design.md  drift-control.md  rule-layering.md  skill-design.md  working-loop.md
docs/en/reference-implementation/: index.md  ml-python-base.md
docs/en/tools/: antigravity.md  claude-code.md  codex.md  github-copilot.md  index.md  opencode.md
docs/es/: index.md  learning-path.md  open-source-readiness.md
docs/es/concepts/: agentic-architectures.md  ai-rules-architecture.md  context-engineering.md  governance-skills-automation-orchestration.md  harness-engineering.md  skills-vs-prompts.md
docs/es/evidence/: index.md  reading-list.md  research.md  security.md  vendor-docs.md
docs/es/labs/: create-a-rule.md  create-a-skill.md  index.md  publish-safe-docs.md  (+1 more)
docs/reference-data/: evidence-sources.yml  ml-python-base-snapshot.json
scripts/: sync_reference_template.py
(+33 files in other folders)
